doc/bnf.txt
-----------------------------------------
Prog                 :=      Expr
Expr                 :=      AddExpr
AddExpr              :=      MultiExpr
                     :=      AddExpr + MultiExpr
                     :=      AddExpr -  MultiExpr
MultiExpr            :=      PrimaryExpr
                     :=      MultiExpr * PrimaryExpr
                     :=      MultiExpr / PrimaryExpr
PrimaryExpr          :=      Num
-----------------------------------------
Prog                 :=      Expr
Expr                 :=      AddExpr
AddExpr              :=      MultiExpr
                     :=      AddExpr + MultiExpr
                     :=      AddExpr -  MultiExpr
MultiExpr            :=      PrimaryExpr
                     :=      MultiExpr * PrimaryExpr
                     :=      MultiExpr / PrimaryExpr
PrimaryExpr          :=      Num
                     :=      (Expr)

-----------------------------------------
Prog                 :=      Stmt*
Stmt                 :=      Expr;
Expr                 :=      AssignExpr
AssignExpr           :=      AddExpr
                     :=      AddExpr = AssignExpr
AddExpr              :=      MultiExpr
                     :=      AddExpr + MultiExpr
                     :=      AddExpr -  MultiExpr
MultiExpr            :=      PrimaryExpr
                     :=      MultiExpr * PrimaryExpr
                     :=      MultiExpr / PrimaryExpr
PrimaryExpr          :=      Num
                     :=      (Expr)
                     :=      Identifier

-----------------------------------------
Prog                 :=      Function*
Function             :=      DeclarationSpec Declarator "{"Stmt*"}"
DeclarationSpec      :=      int
Declarator           :=      (*)* identifier TypeSuffix
TypeSuffix           :=      "("FuncArg?")"
                     :=
FuncArg              :=      DeclarationSpec Declarator (, DeclarationSpec Declarator)*
Stmt                 :=      Expr?;
                     :=      IfStmt
                     :=      WhileStmt
                     :=      DoWhileStmt
                     :=      ForStmt
                     :=      BlockStmt
                     :=      ReturnStmt
                     :=      DeclarationStmt
IfStmt               :=      if "(" Expr ")" Stmt
                     :=      if "(" Expr ")" Stmt Else Stmt
WhileStmt            :=      while "(" Expr ")" Stmt
DoWhileStmt          :=      do Stmt while "(" Expr ")" ";"
ForStmt              :=      for "("Expr?;Expr?;Expr?")" Stmt
BlockStmt            :=      "{" Stmt* "}"
ReturnStmt           :=      return Expr ";"
DeclarationStmt      :=      DeclarationSpec Declarator(= Expr)? (, Declarator(= Expr)?)* ";"
                     :=      DeclarationSpec ";"
Expr                 :=      AssignExpr
AssignExpr           :=      EqualityExpr
                     :=      EqualityExpr = AssignExpr
EqualityExpr         :=      RelationalExpr
                     :=      EqualityExpr == RelationalExpr
                     :=      EqualityExpr != relationalExpr
RelationalExpr       :=      AddExpr
                     :=      RelationalExpr < AddExpr
                     :=      RelationalExpr > AddExpr
                     :=      RelationalExpr <= AddExpr
                     :=      RelationalExpr >= AddExpr
AddExpr              :=      MultiExpr
                     :=      AddExpr + MultiExpr
                     :=      AddExpr -  MultiExpr
MultiExpr            :=      UnaryExpr
                     :=      MultiExpr * UnaryExpr
                     :=      MultiExpr / UnaryExpr
UnaryExpr            :=      UnaryOperator UnaryExpr
                     :=      PrimaryExpr
PrimaryExpr          :=      Num
                     :=      (Expr)
                     :=      Identifier("("Args?")")?
                     :=      "({"Stmt+"})"

Args                 :=      AssignExpr(,AssignExpr)*
